--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="bgcolor">
-    <h1 class="journal-head">Daily Journal</h1>
+    <h1 class="journal-head">📖Daily Journal🐝</h1>
     <form class="journal-form"action="">
         <fieldset class="fieldJournal">
             <label for="journalDate">Date of entry</label>
