--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@
         <input class="sub-button" type="submit" value="Record Journal Entry">
     </form>
 </body>
+<script type="module" src="./scripts/main.js"></script>
 </html>
